--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 											<a href="./install.html" class="special">Go to Install</a>
 										</article>
 										<article>
-											<a href="./commands.html" class="image"><img src="images/pic05.gif" alt="" /></a>
+											<a href="./commands/New-VPASToken.html" class="image"><img src="images/pic05.gif" alt="" /></a>
 											<h3 class="major">COMMANDS</h3>
 											<p>An overview of all the commands and syntax in VpasModule with examples</p>
-											<a href="./commands.html" class="special">Go to Commands</a>
+											<a href="./commands/New-VPASToken.html" class="special">Go to Commands</a>
 										</article>
 										<article>
 											<a href="./updates.html" class="image"><img src="images/pic06.gif" alt="" /></a>
