--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 				<!-- Banner -->
 				<center>
-					<section id="banner" style="margin-bottom: -5%;">
+					<section id="banner" style="margin-bottom: -5%; margin-top: -5%;">
 						<div class="inner">
-							<div class="logo"><span><a style="text-decoration: none" href="./index.html"><img src="images\VpasModuleLOGO.png" alt="VpasModuleLOGO"></a></span></div>
+							<div class="logo"><span><a style="text-decoration: none;" href="./index.html"><img src="images\VpasModuleLOGO.png" alt="VpasModuleLOGO"></a></span></div>
 							<p>A simplified PowerShell module to interact with CyberArk Web Services (REST API)</p>
 							
 							<ul class="actions" style="display: inline-flex;">
@@ -51,9 +51,10 @@
 								<li><a href="./about.html" class="button icon solid" style="background-color: #2e3141;">About</a></li>
 								<li><a target="_blank" rel="noopener noreferrer" href="https://docs.cyberark.com/Portal/Content/Resources/_TopNav/cc_Portal.htm" class="button icon solid" style="background-color: #2e3141;">Docs</a></li>
 							</ul>
-						</div>
+							</div>
 					</section>
 				</center>
+
 				<!-- Wrapper -->
 					<section id="wrapper">
 
