--- a/install.html
+++ b/install.html
@@ -38,7 +38,7 @@
 
 				<!-- Banner -->
 				<center>
-					<section id="banner" style="margin-bottom: -5%;">
+					<section id="banner" style="margin-bottom: -5%; margin-top: -5%;">
 						<div class="inner">
 							<div class="logo"><span><a style="text-decoration: none" href="./index.html"><img src="images\VpasModuleLOGO.png" alt="VpasModuleLOGO"></a></span></div>
 
