--- a/install.html
+++ b/install.html
@@ -7,14 +7,36 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	<script>
+			function ToggleSideNavFunctionHeader() {
+				var x = document.getElementById("SideNavToggleIDHeader").textContent;
+				if(x === ">"){
+					document.getElementById("SideNavToggleIDHeader").innerHTML = "<";
+					openNavHeader();
+				}
+				else{
+					document.getElementById("SideNavToggleIDHeader").innerHTML = ">";
+					closeNavHeader();
+				}
+			}			
+			function openNavHeader() {
+				document.getElementById("mySidebar").style.width = "200px";
+				document.getElementById("maintempHeader").style.marginLeft = "200px";
+			}
+
+			function closeNavHeader() {
+			  document.getElementById("mySidebar").style.width = "0";
+			  document.getElementById("maintempHeader").style.marginLeft= "0";
+			}
+			
+	</script>
 	<body class="is-preload">
-		
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">VpasModule</a></h1>
+					<header id="header" class="inner">
+						<h1><div id="maintempHeader"><button id="SideNavToggleIDHeader" class="openbtnHeader" onclick="ToggleSideNavFunctionHeader()">></button><a href="index.html">&emsp;VpasModule</a></div></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -36,6 +58,13 @@
 						</div>
 					</nav>
 
+				<!-- SIDENAV -->  
+				<div class="sidebar" id="mySidebar">
+					<a href="#AutomaticInstallAnchor"><b>Automatic</b></a>
+					<a href="#ManualInstallAnchor"><b>Manual</b></a>
+				</div>
+				<!-- END OF SIDENAV BAR -->
+
 				<!-- Banner -->
 				<center>
 					<section id="banner" style="margin-bottom: -5%; margin-top: -5%;">
@@ -55,12 +84,6 @@
 					</section>
 				</center>
 				
-				<!-- SIDENAV -->
-					<div class="sidenav">
-						<a>Jump To:</a>
-						<a href="#AutomaticInstallAnchor"><b>Automatic</b></a>
-						<a href="#ManualInstallAnchor"><b>Manual</b></a>
-					</div>
 					
 				<!-- Wrapper -->
 					<section id="wrapper">
