--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<center>
 					<section id="banner" style="margin-bottom: -5%; margin-top: -5%;">
 						<div class="inner">
-							<div class="logo"><span><a style="text-decoration: none;" href="./index.html"><img src="images\VpasModuleLOGO.png" alt="VpasModuleLOGO"></a></span></div>
+							<div class="logo"><span><a style="text-decoration: none;" href="./index.html"><img style="width: 100%;" src="images\VpasModuleLOGO.png" alt="VpasModuleLOGO"></a></span></div>
 							<p>A simplified PowerShell module to interact with CyberArk Web Services (REST API)</p>
 							
 							<ul class="actions" style="display: inline-flex;">
@@ -122,7 +122,7 @@
 					<section id="footer">
 						<div class="inner">
 							<center>
-							<ul class="actions" style="margin-left: 200px; margin-right: auto; margin-top: -10%;">
+							<ul class="actions" style="margin-left: auto; margin-right: auto; margin-top: -10%;">
 								<li><a target="_blank" rel="noopener noreferrer" href="https://www.buymeacoffee.com/vmelamed5" class="icon solid"><img src="./images/BuyMeACoffee.png"></a></li>
 								<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/sponsors/vmelamed5" class="icon solid"><img src="./images/GithubSponsor.png"></a></li>
 								<li><a target="_blank" rel="noopener noreferrer" href="https://venmo.com/u/Vadim-Melamed" class="icon solid"><img src="./images/Venmo.png"></a></li>
