--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					<section id="footer">
 						<div class="inner">
 							<center>
-							<ul class="actions" style="margin-left: auto; margin-right: auto; margin-top: -10%;">
+							<ul class="actions" style="margin-left: auto; margin-right: auto;">
 								<li><a target="_blank" rel="noopener noreferrer" href="https://www.buymeacoffee.com/vmelamed5" class="icon solid"><img src="./images/BuyMeACoffee.png"></a></li>
 								<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/sponsors/vmelamed5" class="icon solid"><img src="./images/GithubSponsor.png"></a></li>
 								<li><a target="_blank" rel="noopener noreferrer" href="https://venmo.com/u/Vadim-Melamed" class="icon solid"><img src="./images/Venmo.png"></a></li>
