--- a/updates.html
+++ b/updates.html
@@ -63,7 +63,7 @@
 				<center>
 					<section id="banner" style="margin-bottom: -5%; margin-top: -5%;">
 						<div class="inner">
-							<div class="logo"><span><a style="text-decoration: none" href="./index.html"><img src="images\VpasModuleLOGO.png" alt="VpasModuleLOGO"></a></span></div>
+							<div class="logo"><span><a style="text-decoration: none" href="./index.html"><img style="width: 100%;" src="images\VpasModuleLOGO.png" alt="VpasModuleLOGO"></a></span></div>
 
 							<p>Update History + Release Notes</p>
 							<ul class="actions" style="display: inline-flex;">
