--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
 				<!-- Header -->
 					<header id="header" class="inner">
-						<h1><div id="maintempHeader"><button id="SideNavToggleIDHeader" class="openbtnHeader" onclick="ToggleSideNavFunctionHeader()">></button><a href="index.html">&emsp;VpasModule</a></div></h1>
+						<h1><div id="maintempHeader"><button style="width: 5%;" id="SideNavToggleIDHeader" class="openbtnHeader" onclick="ToggleSideNavFunctionHeader()">></button><a href="index.html">&emsp;VpasModule</a></div></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -129,7 +129,7 @@
 					<section id="footer">
 						<div class="inner">
 							<center>
-							<ul class="actions" style="margin-left: 200px; margin-right: auto; margin-top: -10%;">
+							<ul class="actions" style="margin-left: auto; margin-right: auto;">
 								<li><a target="_blank" rel="noopener noreferrer" href="https://www.buymeacoffee.com/vmelamed5" class="icon solid"><img src="./images/BuyMeACoffee.png"></a></li>
 								<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/sponsors/vmelamed5" class="icon solid"><img src="./images/GithubSponsor.png"></a></li>
 								<li><a target="_blank" rel="noopener noreferrer" href="https://venmo.com/u/Vadim-Melamed" class="icon solid"><img src="./images/Venmo.png"></a></li>
