--- a/install.html
+++ b/install.html
@@ -100,7 +100,7 @@
 											<br>
 											<h1 style="text-align: left;">Automatic Installation</h1>
 											
-											<table class="inner" style="background: #2e3141; width: 100%;">
+											<table class="content" style="background: #2e3141; width: 100%;">
 												<tr>
 													<td>
 														<p style="text-align: left;">01) Open PowerShell as Admin<br>- Right click PowerShell and run as admin<br><br>*If no admin rights, open PowerShell as a normal user</p>
@@ -140,7 +140,7 @@
 											<br>
 											<h1 style="text-align: left;">Manual Installation</h1>
 											
-											<table class="inner" style="background: #2e3141; width: 100%;">
+											<table class="content" style="background: #2e3141; width: 100%;">
 												<tr>
 													<td>
 														<p style="text-align: left;">01) Click on the Github Button<br>- ​​Or browse to: <a target="_blank" rel="noopener noreferrer" href="https://github.com/vmelamed5/CyberArk">github.com/vmelamed5/CyberArk</a></p>
