--- a/commands/Get-VPASIdentityTenantDetails.html
+++ b/commands/Get-VPASIdentityTenantDetails.html
@@ -311,7 +311,7 @@
 											<br><br>
 											<h1 style="text-align: left;">Examples:</h1>
 											<table style="background: #2e3141">
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>$AllIdentityUsers = Get-VPASIdentityTenantDetails</b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>$TenantDetails = Get-VPASIdentityTenantDetails</b></p></td></tr>
 											</table>
 											</div>
 											
