--- a/commands/New-VPASToken.html
+++ b/commands/New-VPASToken.html
@@ -326,6 +326,7 @@
 												<tr><td><p style="text-align: left; font-size: 14px;"><b>$token = New-VPASToken -PVWA {PVWA VALUE} -AuthType saml -IDPLogin {IDPLogin URL}</b></p></td></tr>
 												<tr><td><p style="text-align: left; font-size: 14px;"><b>$token = New-VPASToken -PVWA {PVWA VALUE} -AuthType ispss_oauth -IdentityURL {IdentityURL URL}</b></p></td></tr>
 												<tr><td><p style="text-align: left; font-size: 14px;"><b>$token = New-VPASToken -PVWA {PVWA VALUE} -AuthType ispss_cyberark -IdentityURL {IdentityURL URL}</b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>$token = New-VPASToken -PVWA {PVWA VALUE} -AuthType ispss_cyberark -IdentityURL {IdentityURL URL} -EnableTextRecorder</b></p></td></tr>
 											</table>
 											</div>
 											
