--- a/commands/Template-Page.html
+++ b/commands/Template-Page.html
@@ -95,6 +95,7 @@
 						<a href="./Add-VPASAccount.html" style="font-size: 14px; color: #f5f5f5;">- Add-VPASAccount</a>
 						<a href="./Remove-VPASAccount.html" style="font-size: 14px; color: #f5f5f5;">- Remove-VPASAccount</a>
 						<a href="./Update-VPASAccountFields.html" style="font-size: 14px; color: #f5f5f5;">- Update-VPASAccountFields</a>
+						<a href="./Get-VPASAllAccounts.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASAllAccounts</a>
 						<a href="./Get-VPASAccountDetails.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASAccountDetails</a>
 						<a href="./Get-VPASAccountActivity.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASAccountActivity</a>
 						<a href="./Get-VPASPasswordHistory.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASPasswordHistory</a>
@@ -111,6 +112,7 @@
 						<a href="./Remove-VPASAllDiscoveredAccounts.html" style="font-size: 14px; color: #f5f5f5;">- Remove-VPASAllDiscoveredAccounts</a>
 						<a href="./Set-VPASLinkedAccount.html" style="font-size: 14px; color: #f5f5f5;">- Set-VPASLinkedAccount</a>
 						<a href="./Remove-VPASLinkedAccount.html" style="font-size: 14px; color: #f5f5f5;">- Remove-VPASLinkedAccount</a>
+						<a href="./Get-VPASAccountPrivateSSHKey.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASAccountPrivateSSHKey</a>
 						<a><b>Applications</a></b>
 						<a href="./Add-VPASApplication.html" style="font-size: 14px; color: #f5f5f5;">- Add-VPASApplication</a>
 						<a href="./Remove-VPASApplication.html" style="font-size: 14px; color: #f5f5f5;">- Remove-VPASApplication</a>
@@ -126,6 +128,7 @@
 						<a href="./Get-VPASSafes.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASSafes</a>
 						<a href="./Get-VPASSafeDetails.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASSafeDetails</a>
 						<a href="./Get-VPASSafesByPlatformID.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASSafesByPlatformID</a>
+						<a href="./Get-VPASAllSafes.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASAllSafes</a>
 						<a><b>Safe Members</a></b>
 						<a href="./Add-VPASSafeMember.html" style="font-size: 14px; color: #f5f5f5;">- Add-VPASSafeMember</a>
 						<a href="./Remove-VPASSafeMember.html" style="font-size: 14px; color: #f5f5f5;">- Remove-VPASSafeMember</a>
@@ -133,6 +136,7 @@
 						<a href="./Get-VPASSafeMembers.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASSafeMembers</a>
 						<a href="./Get-VPASSafeMemberSearch.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASSafeMemberSearch</a>
 						<a><b>Platforms</a></b>
+						<a href="./Get-VPASAllPlatforms.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASAllPlatforms</a>
 						<a href="./Copy-VPASPlatform.html" style="font-size: 14px; color: #f5f5f5;">- Copy-VPASPlatform</a>
 						<a href="./Remove-VPASPlatform.html" style="font-size: 14px; color: #f5f5f5;">- Remove-VPASPlatform</a>
 						<a href="./Export-VPASPlatform.html" style="font-size: 14px; color: #f5f5f5;">- Export-VPASPlatform</a>
@@ -145,14 +149,17 @@
 						<a href="./Remove-VPASGroupPlatform.html" style="font-size: 14px; color: #f5f5f5;">- Remove-VPASGroupPlatform</a>
 						<a href="./Disable-VPASGroupPlatform.html" style="font-size: 14px; color: #f5f5f5;">- Disable-VPASGroupPlatform</a>
 						<a href="./Enable-VPASGroupPlatform.html" style="font-size: 14px; color: #f5f5f5;">- Enable-VPASGroupPlatform</a>
+						<a href="./Get-VPASAllGroupPlatforms.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASAllGroupPlatforms</a>
 						<a href="./Get-VPASGroupPlatformDetails.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASGroupPlatformDetails</a>
 						<a href="./Copy-VPASUsagePlatform.html" style="font-size: 14px; color: #f5f5f5;">- Copy-VPASUsagePlatform</a>
 						<a href="./Remove-VPASUsagePlatform.html" style="font-size: 14px; color: #f5f5f5;">- Remove-VPASUsagePlatform</a>
+						<a href="./Get-VPASAllUsagePlatforms.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASAllUsagePlatforms</a>
 						<a href="./Get-VPASUsagePlatformDetails.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASUsagePlatformDetails</a>
 						<a href="./Copy-VPASRotationalPlatform.html" style="font-size: 14px; color: #f5f5f5;">- Copy-VPASRotationalPlatform</a>
 						<a href="./Remove-VPASRotationalPlatform.html" style="font-size: 14px; color: #f5f5f5;">- Remove-VPASRotationalPlatform</a>
 						<a href="./Disable-VPASRotationalPlatform.html" style="font-size: 14px; color: #f5f5f5;">- Disable-VPASRotationalPlatform</a>
 						<a href="./Enable-VPASRotationalPlatform.html" style="font-size: 14px; color: #f5f5f5;">- Enable-VPASRotationalPlatform</a>
+						<a href="./Get-VPASAllRotationalPlatforms.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASAllRotationalPlatforms</a>
 						<a href="./Get-VPASRotationalPlatformDetails.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASRotationalPlatformDetails</a>
 						<a><b>Internal</a></b>
 						<a href="./Add-VPASAllowedReferrer.html" style="font-size: 14px; color: #f5f5f5;">- Add-VPASAllowedReferrer</a>
@@ -172,11 +179,13 @@
 						<a href="./Get-VPASAllPSMServers.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASAllPSMServers</a>
 						<a href="./Get-VPASPSMSettingsByPlatformID.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASPSMSettingsByPlatformID</a>
 						<a href="./Update-VPASPSMSettingsByPlatformID.html" style="font-size: 14px; color: #f5f5f5;">- Update-VPASPSMSettingsByPlatformID</a>
+						<a href="./Get-VPASAllActiveSessions.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASAllActiveSessions</a>
 						<a href="./Get-VPASActiveSessionActivities.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASActiveSessionActivities</a>
 						<a href="./Get-VPASActiveSessionProperties.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASActiveSessionProperties</a>
 						<a href="./Get-VPASActiveSessions.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASActiveSessions</a>
 						<a href="./Invoke-VPASActivePSMSessionAction.html" style="font-size: 14px; color: #f5f5f5;">- Invoke-VPASActivePSMSessionAction</a>
 						<a href="./Watch-VPASActivePSMSession.html" style="font-size: 14px; color: #f5f5f5;">- Watch-VPASActivePSMSession</a>
+						<a href="./Get-VPASAllPSMSessions.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASAllPSMSessions</a>
 						<a href="./Get-VPASPSMSessionActivities.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASPSMSessionActivities</a>
 						<a href="./Get-VPASPSMSessionDetails.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASPSMSessionDetails</a>
 						<a href="./Get-VPASPSMSessionProperties.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASPSMSessionProperties</a>
@@ -187,6 +196,7 @@
 						<a href="./Disable-.VPASEPVUserhtml" style="font-size: 14px; color: #f5f5f5;">- Disable-VPASEPVUser</a>
 						<a href="./Enable-VPASEPVUser.html" style="font-size: 14px; color: #f5f5f5;">- Enable-VPASEPVUser</a>
 						<a href="./Get-VPASEPVUserDetails.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASEPVUserDetails</a>
+						<a href="./Get-VPASEPVUserTypes.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASEPVUserTypes</a>
 						<a href="./Get-VPASEPVUserDetailsSearch.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASEPVUserDetailsSearch</a>
 						<a href="./Get-VPASCurrentEPVUserDetails.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASCurrentEPVUserDetails</a>
 						<a href="./Update-VPASEPVUser.html" style="font-size: 14px; color: #f5f5f5;">- Update-VPASEPVUser</a>
@@ -196,6 +206,7 @@
 						<a href="./Remove-VPASEPVGroup.html" style="font-size: 14px; color: #f5f5f5;">- Remove-VPASEPVGroup</a>
 						<a href="./Update-VPASEPVGroup.html" style="font-size: 14px; color: #f5f5f5;">- Update-VPASEPVGroup</a>
 						<a href="./Get-VPASEPVGroupDetails.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASEPVGroupDetails</a>
+						<a href="./Get-VPASAllEPVGroups.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASAllEPVGroups</a>
 						<a href="./Add-VPASMemberEPVGroup.html" style="font-size: 14px; color: #f5f5f5;">- Add-VPASMemberEPVGroup</a>
 						<a href="./Remove-VPASMemberEPVGroup.html" style="font-size: 14px; color: #f5f5f5;">- Remove-VPASMemberEPVGroup</a>
 						<a><b>Bulk Actions</a></b>
@@ -222,6 +233,7 @@
 						<a href="./Update-VPASIdentityRole.html" style="font-size: 14px; color: #f5f5f5;">- Update-VPASIdentityRole</a>
 						<a href="./Get-VPASIdentityRoleDetails.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASIdentityRoleDetails</a>
 						<a href="./Get-VPASIdentityRoles.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASIdentityRoles</a>
+						<a href="./Get-VPASIdentityAllRoles.html" style="font-size: 14px; color: #f5f5f5;">- Get-VPASIdentityAllRoles</a>
 						<a><b>Security Questions (Identity)</a></b>
 						<a href="./Add-VPASIdentitySecurityQuestionAdmin.html" style="font-size: 14px; color: #f5f5f5;">- Add-VPASIdentitySecurityQuestionAdmin</a>
 						<a href="./Remove-VPASIdentityAdminSecurityQuestion.html" style="font-size: 14px; color: #f5f5f5;">- Remove-VPASIdentityAdminSecurityQuestion</a>
