--- a/updates.html
+++ b/updates.html
@@ -117,8 +117,8 @@
 											<h3 class="major">VpasModule Versions:</h3>
 											<div class="table-wrapper">
 												
-												<!--v14.0.1-->
-												<button type="button" class="collapsibleUpdate">&nbsp;v14.0.1 (Current)</button>
+												<!--v14.0.3-->
+												<button type="button" class="collapsibleUpdate">&nbsp;v14.0.3 (Current)</button>
 												<div class="contentUpdate" style="overflow-x: scroll;">
 													<p style="padding: 0; margin: 0;">Published Date:</p> 
 														<li>March 12th 2024</li>
@@ -140,6 +140,7 @@
 														<li class="UpdateList">Get-VPASAllSafes: removed -Limit and -Offset parameters, api will loop in batches of 25 until there are no more safes</li>
 														<li class="UpdateList">Add-VPASBulkAccounts: added support for additional PlatformAccountProperties</li>
 														<li class="UpdateList">Invoke-VPASReporting: added more fields to the plaform export report, including required and optional properties</li>
+														<li class="UpdateList">Add-VPASSafemember: -searchIn parameter changed to optional</li>
 													<br>
 													<p class="UpdateTags">New Commands:</p>
 														<li class="UpdateList">Get-VPASEPVUserTypes: Retrieve the various types of EPV users (SelfHosted Only)</li>
